src_old/objects/QuestionDefinedResponseVariant__c.object
<CustomObject>
    <description>Question Defined Response Variant defines a variant to a Question Defined Response, such as language. Question Defined Response Variant is related to Question Defined Response and Variant.</description>
    <fields>
        <fullName>DefinedResponseText__c</fullName>
        <label>Defined Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionDefinedResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Defined Response</label>
        <referenceTo>QuestionDefinedResponse__c</referenceTo>
        <relationshipName>Defined_Responses_Variant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variant</label>
        <referenceTo>Variant__c</referenceTo>
        <relationshipName>Defined_Responses_Variant</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Question Defined Response Variant</label>
    <nameField>
        <displayFormat>QDRVAR-{000000000}</displayFormat>
        <label>Defined Response Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Defined Responses Variant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>